--- a/public/css/style.css
+++ b/public/css/style.css
@@ -406,9 +406,7 @@ footer {
 /* Participants Section Starts */
 
 #section4 {
-  background-color: #08aeea;
-  background-image: linear-gradient(315deg, #08aeea 15%, #2af598 47%);
-  color: #3e5248;
+  color: #555555;
   font-family: "Nunito", sans-serif;
   padding: 50px 100px;
   padding-top: 80px;
