--- a/public/css/style.css
+++ b/public/css/style.css
@@ -20,7 +20,7 @@ ul {
 }
 
 body {
-  font-family: "FontAwesome", sans-serif;
+  font-family: "Poppins", sans-serif;
   line-height: 1.6;
   font-size: 16px;
 }
