better looking emails in footer

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -392,6 +392,8 @@ footer {
 .footer-distributed .footer-center p a {
   color: #54d16b;
   text-decoration: none;
+  display:block;
+  line-height: 1.5;
 }
 
 /* Footer Right */
