--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,7 @@
 /* index CSS */
 
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Nunito&family=Poppins&family=Raleway&display=swap");
 
 * {
   margin: 0;
@@ -113,6 +114,19 @@ header {
 
 .fa-bars {
   color: black;
+}
+
+#loader {
+  position: fixed;
+  width: 100%;
+  height: 100vh;
+  background: #F7EBE9 url("../img/loader4.gif") no-repeat center;
+  z-index: 999;
+}
+
+#content {
+  display: none;
+  transition: #F7EBE9 1s ease-out;
 }
 
 @media screen and (min-width: 900px) {
