custom scrollbar added

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,6 +10,7 @@
 
 html {
   scroll-behavior: smooth;
+  overflow-y: overlay;
 }
 
 a {
@@ -30,6 +31,24 @@ body {
   line-height: 1.6;
   font-size: 16px;
 }
+::-webkit-scrollbar {
+  width: 1.2em;
+  position: absolute;
+
+}
+::-webkit-scrollbar-track {
+  background:transparent;
+  display: none; 
+}
+
+::-webkit-scrollbar-thumb{
+  background: #2e2f38;
+  border: 4px solid #666666;
+  border-radius:3px ;
+}
+::-webkit-scrollbar-thumb:hover{
+  background: rgb(240, 234, 234);
+}
 
 header {
   position: fixed;
@@ -37,8 +56,10 @@ header {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   margin: auto;
   width: 100%;
-  padding: 5px 0;
+  padding: 5px 9px;
   z-index: 999;
+  left: 0em;
+
 }
 
 .container {
