--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -55,9 +55,14 @@ header {
   font-size: 35px;
   cursor: pointer;
   display: inline-block;
-  margin-left: 50px;
+  margin-left: 2%;
+  margin-top: 1%;
+  width: 23%;
 }
-
+.brand img{
+  max-height: 100%;
+  max-width: 100%;
+}
 .brand a {
   color: black;
 }
@@ -99,7 +104,7 @@ header {
   padding: 8px;
   background-color: #555;
   color: white !important;
-  margin: 10px 10px;
+  margin: 1%;
   border-radius: 20px;
   font-weight: bold;
 }
@@ -143,9 +148,10 @@ header {
 
   .main-nav {
     display: flex;
-    margin-right: 30px;
+    margin-right: 1%;
     flex-direction: row;
     justify-content: flex-end;
+    width: 65%;
   }
 
   .nav-links {
@@ -174,7 +180,7 @@ header {
 }
 
 .secHead {
-  margin-top: 200px;
+  margin-top: 22%;
   color: white;
   width: 50%;
 }
@@ -206,7 +212,7 @@ header {
 }
 .about {
   width: 100%;
-  height: 60vh;
+  margin: 10px 10px 30px 10px;
   padding-top: 50px;
 }
 
@@ -218,7 +224,6 @@ header {
 
 .about p {
   font-size: 20px;
-  width: 70%;
   margin: auto;
   text-align: center;
 }
@@ -458,7 +463,6 @@ p {
 /* footer  */
 
 footer {
-  position: fixed;
   bottom: 0;
 }
 
@@ -810,4 +814,30 @@ footer {
 #button.show {
   opacity: 1;
   visibility: visible;
+}
+#js-menu{
+  width: 97%;
+}
+@media screen and (max-width: 889px){
+  .brand{
+    width: 80%;
+  }
+}
+
+@media screen and (max-width: 550px) and (max-height: 850px) {
+  .secHead {
+    width: 90%;
+    margin-top: 40%;
+  }
+
+  .secHead h2 {
+    font-size: 15px;
+  }
+
+  .secHead h1 {
+    font-size: 30px;
+  }
+  .about h2{
+    font-size: 14px;
+  }
 }
