--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -38,7 +38,7 @@ body {
 }
 ::-webkit-scrollbar-track {
   background:transparent;
-  display: none; 
+  display: none;
 }
 
 ::-webkit-scrollbar-thumb{
@@ -96,9 +96,8 @@ header {
 }
 
 .main-nav li:hover {
-  color: #555 !important;
   background-color: white;
-  border: 1px solid black;
+  box-shadow: 0 0 0 1px black;
 }
 
 .main-nav li:hover a {
