--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -32,19 +32,18 @@ body {
 ::-webkit-scrollbar {
   width: 1.2em;
   position: absolute;
-
 }
 ::-webkit-scrollbar-track {
-  background:transparent;
+  background: transparent;
   display: none;
 }
 
-::-webkit-scrollbar-thumb{
+::-webkit-scrollbar-thumb {
   background: #2e2f38;
   border: 4px solid #666666;
-  border-radius:3px ;
+  border-radius: 3px;
 }
-::-webkit-scrollbar-thumb:hover{
+::-webkit-scrollbar-thumb:hover {
   background: rgb(240, 234, 234);
 }
 
@@ -73,6 +72,8 @@ header {
   cursor: pointer;
   display: inline-block;
   margin-left: 50px;
+  display: flex;
+  align-items: center;
 }
 .brand a {
   color: black;
@@ -822,15 +823,15 @@ footer {
   opacity: 1;
   visibility: visible;
 }
-ul#js-menu.main-nav.active{
+ul#js-menu.main-nav.active {
   width: 97%;
 }
-@media screen and (max-width: 400px){
-  .brand{
+@media screen and (max-width: 400px) {
+  .brand {
     margin-left: 2%;
     width: 70%;
   }
-  .brand img{
+  .brand img {
     width: 100%;
   }
 }
@@ -847,7 +848,7 @@ ul#js-menu.main-nav.active{
   .secHead h1 {
     font-size: 30px;
   }
-  .about h2{
+  .about h2 {
     font-size: 14px;
   }
 }
