contact form style changes

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -401,6 +401,7 @@ header {
 .company-info {
   text-align: center;
   background: #555;
+  color: #fff;
 }
 
 .contact {
@@ -425,6 +426,9 @@ p {
   margin: 0px;
 }
 
+.contact form textarea {
+  resize: none;
+}
 .contact form input,
 .contact form textarea,
 .contact form button {
@@ -439,6 +443,10 @@ p {
   border: none;
   padding: 1em;
   text-transform: uppercase;
+}
+
+.contact form button:hover {
+  cursor: pointer;
 }
 
 .contact form button:hover,
